Improved load balancing

--- a/config.json
+++ b/config.json
@@ -4,9 +4,10 @@
  "SCREEN_TOP": 0,
  "SCREEN_WIDTH": 1920,
  "SCREEN_HEIGHT": 1080,
- "FPS": 30,
+ "FPS": 20,
  "MIN_QUALITY": 0.3,
- "MAX_QUALITY": 0.9,
+ "MAX_QUALITY": 1.0,
+ "QUALITY_ALPHA": 0.1,
  "MAX_FRAME_SKIP": 3,
  "MAX_FRAMES_LATENCY": 3,
  "HIGH_FORMAT": "png",
