Add initial latency test, cleaned up window config poll, other

--- a/config.json
+++ b/config.json
@@ -9,7 +9,7 @@
  "MAX_QUALITY": 1.0,
  "QUALITY_ALPHA": 0.05,
  "MAX_FRAME_SKIP": 3,
- "MAX_FRAMES_LATENCY": 3,
+ "ADD_FRAMES_LATENCY": 1,
  "HIGH_FORMAT": "png",
  "LOW_FORMAT": "jpeg",
  "INTERFRAME_FORMAT": "jpeg",
