--- a/config.json
+++ b/config.json
@@ -4,13 +4,15 @@
  "SCREEN_TOP": 0,
  "SCREEN_WIDTH": 1920,
  "SCREEN_HEIGHT": 1080,
- "FPS": 20,
- "MIN_QUALITY": 0.3,
+ "FPS": 30,
+ "MIN_QUALITY": 0.9,
  "MAX_QUALITY": 0.9,
- "QUALITY_ALPHA": 0.05,
+ "QUALITY_ALPHA": 1.0,
  "MAX_FRAME_SKIP": 3,
- "ADD_FRAMES_LATENCY": 1,
+ "ADD_FRAMES_LATENCY": 3,
  "HIGH_FORMAT": "png",
  "LOW_FORMAT": "jpeg",
  "INTERFRAME_FORMAT": "jpeg",
+ "KEYFRAME_THRESHOLD": 0.03,
+ "KEYFRAME_THRESHOLD_SUM": 0.16,
 }
