--- a/config.json
+++ b/config.json
@@ -1,18 +1,18 @@
 {
- "WEB_PORT": 7578,
- "SCREEN_LEFT": 1920,
- "SCREEN_TOP": 0,
- "SCREEN_WIDTH": 1920,
- "SCREEN_HEIGHT": 1080,
- "FPS": 30,
- "MIN_QUALITY": 0.9,
- "MAX_QUALITY": 0.9,
- "QUALITY_ALPHA": 1.0,
- "MAX_FRAME_SKIP": 3,
- "ADD_FRAMES_LATENCY": 3,
  "HIGH_FORMAT": "png",
- "LOW_FORMAT": "jpeg",
- "INTERFRAME_FORMAT": "jpeg",
  "KEYFRAME_THRESHOLD": 0.03,
+ "ADD_FRAMES_LATENCY": 1,
+ "MAX_QUALITY": 0.9,
+ "INTERFRAME_FORMAT": "jpeg",
+ "FPS": 30,
+ "QUALITY_ALPHA": 1,
+ "MIN_QUALITY": 0.3,
+ "SCREEN_HEIGHT": 1080,
+ "LOW_FORMAT": "jpeg",
+ "WEB_PORT": 7578,
+ "SCREEN_WIDTH": 1920,
+ "MAX_FRAME_SKIP": 3,
  "KEYFRAME_THRESHOLD_SUM": 0.16,
+ "SCREEN_LEFT": 0,
+ "SCREEN_TOP": 0
 }
