--- a/config.json
+++ b/config.json
@@ -1,18 +1,18 @@
 {
- "HIGH_FORMAT": "png",
- "KEYFRAME_THRESHOLD": 0.03,
  "ADD_FRAMES_LATENCY": 1,
- "MAX_QUALITY": 0.9,
- "INTERFRAME_FORMAT": "jpeg",
  "FPS": 30,
- "QUALITY_ALPHA": 1,
- "MIN_QUALITY": 0.3,
- "SCREEN_HEIGHT": 1080,
- "LOW_FORMAT": "jpeg",
- "WEB_PORT": 7578,
- "SCREEN_WIDTH": 1920,
- "MAX_FRAME_SKIP": 3,
+ "HIGH_FORMAT": "png",
+ "INTERFRAME_FORMAT": "jpeg",
+ "KEYFRAME_THRESHOLD": 0.03,
  "KEYFRAME_THRESHOLD_SUM": 0.16,
+ "LOW_FORMAT": "jpeg",
+ "MAX_FRAME_SKIP": 3,
+ "MAX_QUALITY": 0.9,
+ "MIN_QUALITY": 0.3,
+ "QUALITY_ALPHA": 1,
+ "SCREEN_HEIGHT": 1080,
  "SCREEN_LEFT": 0,
- "SCREEN_TOP": 0
+ "SCREEN_TOP": 0,
+ "SCREEN_WIDTH": 1920,
+ "WEB_PORT": 7578
 }
