--- a/config.json
+++ b/config.json
@@ -1,17 +1,17 @@
 {
  "ADD_FRAMES_LATENCY": 1,
  "FPS": 30,
- "HIGH_FORMAT": "png",
+ "HIGH_FORMAT": "jpeg",
  "INTERFRAME_FORMAT": "jpeg",
  "KEYFRAME_THRESHOLD": 0.03,
  "KEYFRAME_THRESHOLD_SUM": 0.16,
  "LOW_FORMAT": "jpeg",
- "MAX_FRAME_SKIP": 3,
+ "MAX_FRAME_SKIP": 6,
  "MAX_QUALITY": 0.9,
- "MIN_QUALITY": 0.3,
+ "MIN_QUALITY": 0.9,
  "QUALITY_ALPHA": 1,
  "SCREEN_HEIGHT": 1080,
- "SCREEN_LEFT": 0,
+ "SCREEN_LEFT": 1920,
  "SCREEN_TOP": 0,
  "SCREEN_WIDTH": 1920,
  "WEB_PORT": 7578
