Switch displays button

--- a/config.json
+++ b/config.json
@@ -1,18 +1,28 @@
 {
- "ADD_FRAMES_LATENCY": 1,
+ "ADD_FRAMES_LATENCY": 2,
  "FPS": 30,
- "HIGH_FORMAT": "jpeg",
+ "HIGH_FORMAT": "png",
  "INTERFRAME_FORMAT": "jpeg",
  "KEYFRAME_THRESHOLD": 0.03,
  "KEYFRAME_THRESHOLD_SUM": 0.16,
  "LOW_FORMAT": "jpeg",
  "MAX_FRAME_SKIP": 3,
  "MAX_QUALITY": 0.9,
- "MIN_QUALITY": 0.9,
+ "MIN_QUALITY": 0.3,
  "QUALITY_ALPHA": 1,
- "SCREEN_HEIGHT": 1080,
- "SCREEN_LEFT": 1920,
- "SCREEN_TOP": 0,
- "SCREEN_WIDTH": 1920,
+ "SCREENS": [
+  {
+   "SCREEN_HEIGHT": 1080,
+   "SCREEN_WIDTH": 1920,
+   "SCREEN_X": 0,
+   "SCREEN_Y": 0
+  },
+  {
+   "SCREEN_HEIGHT": 1080,
+   "SCREEN_WIDTH": 1920,
+   "SCREEN_X": 1920,
+   "SCREEN_Y": 0
+  }
+ ],
  "WEB_PORT": 7578
 }
