readme & jar refresh

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
  "ADD_FRAMES_LATENCY": 2,
  "FPS": 30,
- "HIGH_FORMAT": "png",
+ "HIGH_FORMAT": "jpeg",
  "INTERFRAME_FORMAT": "jpeg",
  "KEYFRAME_THRESHOLD": 0.03,
  "KEYFRAME_THRESHOLD_SUM": 0.16,
